--- a/branding/index.html
+++ b/branding/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><meta charset="utf8"/>
 <title>index of gitlab.com/websites/phenomx.ch/assets/branding</title>
 <h2>Index of gitlab.com/websites/phenomx.ch/assets/branding</h2>
-<i><a href=https://gitlab.com/websites/phenomx.ch/assets/branding>.</a> as of 09/01/22</i>
+<i><a href=https://gitlab.com/websites/phenomx.ch/assets/branding>.</a> as of 09/24/22</i>
 <hr>
 
 <ul>
@@ -11,7 +11,9 @@
 <li><a href="biodiv.svg">biodiv.svg</a></li>
 <li><a href="butterfly-noshade.svg">butterfly-noshade.svg</a></li>
 <li><a href="butterfly-sq.svg">butterfly-sq.svg</a></li>
-<li><a href="button.svg.2022_03_21_22_03_16.0.svg">button.svg.2022_03_21_22_03_16.0.svg</a></li>
+<li><a href="buttonfly.png">buttonfly.png</a></li>
+<li><a href="buttonfly.svg">buttonfly.svg</a></li>
+<li><a href="cgm-sticker.png">cgm-sticker.png</a></li>
 <li><a href="cgm-sticker.svg">cgm-sticker.svg</a></li>
 <li><a href="cgm-x-sticker.png">cgm-x-sticker.png</a></li>
 <li><a href="crysals.svg">crysals.svg</a></li>
@@ -21,6 +23,9 @@
 <li><a href="gb-butterfly.svg">gb-butterfly.svg</a></li>
 <li><a href="gbitcoin.svg">gbitcoin.svg</a></li>
 <li><a href="little-golden-bfly-1.svg">little-golden-bfly-1.svg</a></li>
+<li><a href="little-golden-bfly.png">little-golden-bfly.png</a></li>
+<li><a href="little-golden-bfly-solid.png">little-golden-bfly-solid.png</a></li>
+<li><a href="little-golden-bfly-solid.svg">little-golden-bfly-solid.svg</a></li>
 <li><a href="little-golden-bfly.svg">little-golden-bfly.svg</a></li>
 <li><a href="logo.59f387b7.svg">logo.59f387b7.svg</a></li>
 <li><a href="ls.html">ls.md</a></li>
@@ -56,7 +61,7 @@
 <li><a href="world-env-day.svg">world-env-day.svg</a></li>
 </ul>
 <style>img { max-width:240px; }</style>
-<p><img src="biodiv.png" alt="biodiv.png" /> <img src="cgm-x-sticker.png" alt="cgm-x-sticker.png" /> <img src="mday.png" alt="mday.png" /> <img src="motherday.png" alt="motherday.png" /> <img src="pause.period.png" alt="pause.period.png" /> <img src="phx-gold-pausefly2.png" alt="phx-gold-pausefly2.png" /> <img src="phx-gold-pausefly.png" alt="phx-gold-pausefly.png" /> <img src="phx-gold-pause.png" alt="phx-gold-pause.png" /> <img src="phx-gold-w-fly-period.png" alt="phx-gold-w-fly-period.png" /> <img src="phx-gold-w-pause.png" alt="phx-gold-w-pause.png" /> <img src="phx-logo-silhou.png" alt="phx-logo-silhou.png" /> <img src="sacred-pause.png" alt="sacred-pause.png" /> <img src="vitamins-nft.png" alt="vitamins-nft.png" /> <img src="vitamins-pause-period.png" alt="vitamins-pause-period.png" /> <img src="biodiv.svg" alt="biodiv.svg" /> <img src="butterfly-noshade.svg" alt="butterfly-noshade.svg" /> <img src="butterfly-sq.svg" alt="butterfly-sq.svg" /> <img src="button.svg.2022_03_21_22_03_16.0.svg" alt="button.svg.2022_03_21_22_03_16.0.svg" /> <img src="cgm-sticker.svg" alt="cgm-sticker.svg" /> <img src="crysals.svg" alt="crysals.svg" /> <img src="fundsbutterfly.svg" alt="fundsbutterfly.svg" /> <img src="gb-butterfly.svg" alt="gb-butterfly.svg" /> <img src="gbitcoin.svg" alt="gbitcoin.svg" /> <img src="little-golden-bfly-1.svg" alt="little-golden-bfly-1.svg" /> <img src="little-golden-bfly.svg" alt="little-golden-bfly.svg" /> <img src="logo.59f387b7.svg" alt="logo.59f387b7.svg" /> <img src="mothersday-0.svg" alt="mothersday-0.svg" /> <img src="mothersday-1.svg" alt="mothersday-1.svg" /> <img src="mothersday-2.svg" alt="mothersday-2.svg" /> <img src="mothersday.svg" alt="mothersday.svg" /> <img src="phx-button.svg" alt="phx-button.svg" /> <img src="phx-contour-fly-pause.svg" alt="phx-contour-fly-pause.svg" /> <img src="phx-flower.svg" alt="phx-flower.svg" /> <img src="phx-gold-w-bfly-sticker.svg" alt="phx-gold-w-bfly-sticker.svg" /> <img src="phx-gold-w-fly-period.svg" alt="phx-gold-w-fly-period.svg" /> <img src="phx-gold-w-pause.svg" alt="phx-gold-w-pause.svg" /> <img src="phx-gold-w-pause-workbook.svg" alt="phx-gold-w-pause-workbook.svg" /> <img src="phx-sacred-pause.svg" alt="phx-sacred-pause.svg" /> <img src="phx-transformation.svg" alt="phx-transformation.svg" /> <img src="terra-form.svg.2022_04_13_08_01_50.0.svg" alt="terra-form.svg.2022_04_13_08_01_50.0.svg" /> <img src="vitamins-pause-period.svg" alt="vitamins-pause-period.svg" /> <img src="vitamins-pause.svg" alt="vitamins-pause.svg" /> <img src="world-env-day.svg" alt="world-env-day.svg" /></p>
+<p><img src="biodiv.png" alt="biodiv.png" /> <img src="buttonfly.png" alt="buttonfly.png" /> <img src="cgm-sticker.png" alt="cgm-sticker.png" /> <img src="cgm-x-sticker.png" alt="cgm-x-sticker.png" /> <img src="little-golden-bfly.png" alt="little-golden-bfly.png" /> <img src="little-golden-bfly-solid.png" alt="little-golden-bfly-solid.png" /> <img src="mday.png" alt="mday.png" /> <img src="motherday.png" alt="motherday.png" /> <img src="pause.period.png" alt="pause.period.png" /> <img src="phx-gold-pausefly2.png" alt="phx-gold-pausefly2.png" /> <img src="phx-gold-pausefly.png" alt="phx-gold-pausefly.png" /> <img src="phx-gold-pause.png" alt="phx-gold-pause.png" /> <img src="phx-gold-w-fly-period.png" alt="phx-gold-w-fly-period.png" /> <img src="phx-gold-w-pause.png" alt="phx-gold-w-pause.png" /> <img src="phx-logo-silhou.png" alt="phx-logo-silhou.png" /> <img src="sacred-pause.png" alt="sacred-pause.png" /> <img src="vitamins-nft.png" alt="vitamins-nft.png" /> <img src="vitamins-pause-period.png" alt="vitamins-pause-period.png" /> <img src="biodiv.svg" alt="biodiv.svg" /> <img src="butterfly-noshade.svg" alt="butterfly-noshade.svg" /> <img src="butterfly-sq.svg" alt="butterfly-sq.svg" /> <img src="buttonfly.svg" alt="buttonfly.svg" /> <img src="cgm-sticker.svg" alt="cgm-sticker.svg" /> <img src="crysals.svg" alt="crysals.svg" /> <img src="fundsbutterfly.svg" alt="fundsbutterfly.svg" /> <img src="gb-butterfly.svg" alt="gb-butterfly.svg" /> <img src="gbitcoin.svg" alt="gbitcoin.svg" /> <img src="little-golden-bfly-1.svg" alt="little-golden-bfly-1.svg" /> <img src="little-golden-bfly-solid.svg" alt="little-golden-bfly-solid.svg" /> <img src="little-golden-bfly.svg" alt="little-golden-bfly.svg" /> <img src="logo.59f387b7.svg" alt="logo.59f387b7.svg" /> <img src="mothersday-0.svg" alt="mothersday-0.svg" /> <img src="mothersday-1.svg" alt="mothersday-1.svg" /> <img src="mothersday-2.svg" alt="mothersday-2.svg" /> <img src="mothersday.svg" alt="mothersday.svg" /> <img src="phx-button.svg" alt="phx-button.svg" /> <img src="phx-contour-fly-pause.svg" alt="phx-contour-fly-pause.svg" /> <img src="phx-flower.svg" alt="phx-flower.svg" /> <img src="phx-gold-w-bfly-sticker.svg" alt="phx-gold-w-bfly-sticker.svg" /> <img src="phx-gold-w-fly-period.svg" alt="phx-gold-w-fly-period.svg" /> <img src="phx-gold-w-pause.svg" alt="phx-gold-w-pause.svg" /> <img src="phx-gold-w-pause-workbook.svg" alt="phx-gold-w-pause-workbook.svg" /> <img src="phx-sacred-pause.svg" alt="phx-sacred-pause.svg" /> <img src="phx-transformation.svg" alt="phx-transformation.svg" /> <img src="terra-form.svg.2022_04_13_08_01_50.0.svg" alt="terra-form.svg.2022_04_13_08_01_50.0.svg" /> <img src="vitamins-pause-period.svg" alt="vitamins-pause-period.svg" /> <img src="vitamins-pause.svg" alt="vitamins-pause.svg" /> <img src="world-env-day.svg" alt="world-env-day.svg" /></p>
 
 <hr>
-made w/ vi, perl, pandoc &amp; ♡ : <a href="https://ipfs.safewatch.xyz/ipfs/QmbnMii8QLvMv1rGy178NjJhT6AP7soVZhkJJHZvCVsNTe">/ipfs/QmbnMii8QLvMv1rGy178NjJhT6AP7soVZhkJJHZvCVsNTe</a>
+made w/ vi, perl, pandoc &amp; ♡ : <a href="https://ipfs.safewatch.tk/ipfs/QmR63zYVbvbX3fEB83FGZfteqnH6C7fNW1ty58TuHRmzu7">/ipfs/QmR63zYVbvbX3fEB83FGZfteqnH6C7fNW1ty58TuHRmzu7</a>
