--- a/logo/index.html
+++ b/logo/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><meta charset="utf8"/>
-<title>index of github.com/DrI-T/design/logo</title>
+<title>index of /media/michelc/Elements/phenomx/design/logo</title>
 <style>body { background-color: #ddccee; }</style>
-<h2>Index of github.com/DrI-T/design/logo</h2>
-<i><a href=https://github.com/DrI-T/design/logo>.</a> as of 10/19/22</i>
+<h2>Index of /media/michelc/Elements/phenomx/design/logo</h2>
+<i><a href=https:///media/michelc/Elements/phenomx/design/logo>.</a> as of 12/24/22</i>
 <hr>
 
 <ul>
@@ -19,6 +19,7 @@
 <li><a href="phx-blue-gold-w-bfly-wo-shade-icon.png.svg">phx-blue-gold-w-bfly-wo-shade-icon.png.svg</a></li>
 <li><a href="phx-blue-gold-w-bfly-wo-shade-icon.svg">phx-blue-gold-w-bfly-wo-shade-icon.svg</a></li>
 <li><a href="phx-branding.jpg">phx-branding.jpg</a></li>
+<li><a href="phx-branding.png">phx-branding.png</a></li>
 <li><a href="phx-branding.svg">phx-branding.svg</a></li>
 <li><a href="phxfly.svg">phxfly.svg</a></li>
 <li><a href="phx-gold-icon-circlable.svg">phx-gold-icon-circlable.svg</a></li>
@@ -31,16 +32,21 @@
 <li><a href="phx-gold-w-bfly-sticker.svg">phx-gold-w-bfly-sticker.svg</a></li>
 <li><a href="phx-header-notag.svg">phx-header-notag.svg</a></li>
 <li><a href="phx-header.svg">phx-header.svg</a></li>
+<li><a href="phx-header-tagline.png">phx-header-tagline.png</a></li>
 <li><a href="phx-header-tagline.svg">phx-header-tagline.svg</a></li>
+<li><a href="phx-header-tag-placeholder.svg">phx-header-tag-placeholder.svg</a></li>
 <li><a href="phx-logo-brushed.svg">phx-logo-brushed.svg</a></li>
 <li><a href="phx-logo.jpg">phx-logo.jpg</a></li>
 <li><a href="phx-logo-yellow.svg">phx-logo-yellow.svg</a></li>
 <li><a href="PNGs">PNGs</a></li>
+<li><a href="unpause1.png">unpause1.png</a></li>
+<li><a href="unpause.png">unpause.png</a></li>
+<li><a href="unpause.svg">unpause.svg</a></li>
 <li><a href="vectorial-gold-brushed.svg">vectorial-gold-brushed.svg</a></li>
 <li><a href="whitepng.sh">whitepng.sh</a></li>
 </ul>
 <style>img { max-width:240px; }</style>
-<p><img src="photo_2022-03-20_17-42-02.jpg" alt="photo_2022-03-20_17-42-02.jpg" /> <img src="phx-branding.jpg" alt="phx-branding.jpg" /> <img src="phx-logo.jpg" alt="phx-logo.jpg" /> <img src="butterfly-gold.svg" alt="butterfly-gold.svg" /> <img src="i-xagud.svg" alt="i-xagud.svg" /> <img src="phx-blue-gold-w-bfly-circlable.svg" alt="phx-blue-gold-w-bfly-circlable.svg" /> <img src="phx-blue-gold-w-bfly-icon.svg" alt="phx-blue-gold-w-bfly-icon.svg" /> <img src="phx-blue-gold-w-bfly-wo-shade-icon.png.svg" alt="phx-blue-gold-w-bfly-wo-shade-icon.png.svg" /> <img src="phx-blue-gold-w-bfly-wo-shade-icon.svg" alt="phx-blue-gold-w-bfly-wo-shade-icon.svg" /> <img src="phx-branding.svg" alt="phx-branding.svg" /> <img src="phxfly.svg" alt="phxfly.svg" /> <img src="phx-gold-icon-circlable.svg" alt="phx-gold-icon-circlable.svg" /> <img src="phx-gold-icon-tile.svg" alt="phx-gold-icon-tile.svg" /> <img src="phx-gold-logo-10ptransp.svg" alt="phx-gold-logo-10ptransp.svg" /> <img src="phx-gold-logo-circlable.svg" alt="phx-gold-logo-circlable.svg" /> <img src="phx-gold-logo.svg" alt="phx-gold-logo.svg" /> <img src="phx-gold-w-bfly-icon.svg" alt="phx-gold-w-bfly-icon.svg" /> <img src="phx-gold-w-bfly-icon.svg.2022_03_20_17_33_16.0.svg" alt="phx-gold-w-bfly-icon.svg.2022_03_20_17_33_16.0.svg" /> <img src="phx-gold-w-bfly-sticker.svg" alt="phx-gold-w-bfly-sticker.svg" /> <img src="phx-header-notag.svg" alt="phx-header-notag.svg" /> <img src="phx-header.svg" alt="phx-header.svg" /> <img src="phx-header-tagline.svg" alt="phx-header-tagline.svg" /> <img src="phx-logo-brushed.svg" alt="phx-logo-brushed.svg" /> <img src="phx-logo-yellow.svg" alt="phx-logo-yellow.svg" /> <img src="vectorial-gold-brushed.svg" alt="vectorial-gold-brushed.svg" /></p>
+<p><img src="photo_2022-03-20_17-42-02.jpg" alt="photo_2022-03-20_17-42-02.jpg" /> <img src="phx-branding.jpg" alt="phx-branding.jpg" /> <img src="phx-logo.jpg" alt="phx-logo.jpg" /> <img src="phx-branding.png" alt="phx-branding.png" /> <img src="phx-header-tagline.png" alt="phx-header-tagline.png" /> <img src="unpause1.png" alt="unpause1.png" /> <img src="unpause.png" alt="unpause.png" /> <img src="butterfly-gold.svg" alt="butterfly-gold.svg" /> <img src="i-xagud.svg" alt="i-xagud.svg" /> <img src="phx-blue-gold-w-bfly-circlable.svg" alt="phx-blue-gold-w-bfly-circlable.svg" /> <img src="phx-blue-gold-w-bfly-icon.svg" alt="phx-blue-gold-w-bfly-icon.svg" /> <img src="phx-blue-gold-w-bfly-wo-shade-icon.png.svg" alt="phx-blue-gold-w-bfly-wo-shade-icon.png.svg" /> <img src="phx-blue-gold-w-bfly-wo-shade-icon.svg" alt="phx-blue-gold-w-bfly-wo-shade-icon.svg" /> <img src="phx-branding.svg" alt="phx-branding.svg" /> <img src="phxfly.svg" alt="phxfly.svg" /> <img src="phx-gold-icon-circlable.svg" alt="phx-gold-icon-circlable.svg" /> <img src="phx-gold-icon-tile.svg" alt="phx-gold-icon-tile.svg" /> <img src="phx-gold-logo-10ptransp.svg" alt="phx-gold-logo-10ptransp.svg" /> <img src="phx-gold-logo-circlable.svg" alt="phx-gold-logo-circlable.svg" /> <img src="phx-gold-logo.svg" alt="phx-gold-logo.svg" /> <img src="phx-gold-w-bfly-icon.svg" alt="phx-gold-w-bfly-icon.svg" /> <img src="phx-gold-w-bfly-icon.svg.2022_03_20_17_33_16.0.svg" alt="phx-gold-w-bfly-icon.svg.2022_03_20_17_33_16.0.svg" /> <img src="phx-gold-w-bfly-sticker.svg" alt="phx-gold-w-bfly-sticker.svg" /> <img src="phx-header-notag.svg" alt="phx-header-notag.svg" /> <img src="phx-header.svg" alt="phx-header.svg" /> <img src="phx-header-tagline.svg" alt="phx-header-tagline.svg" /> <img src="phx-header-tag-placeholder.svg" alt="phx-header-tag-placeholder.svg" /> <img src="phx-logo-brushed.svg" alt="phx-logo-brushed.svg" /> <img src="phx-logo-yellow.svg" alt="phx-logo-yellow.svg" /> <img src="unpause.svg" alt="unpause.svg" /> <img src="vectorial-gold-brushed.svg" alt="vectorial-gold-brushed.svg" /></p>
 
 <hr>
-made w/ vi, perl, pandoc &amp; ♡ : <a href="https://ipfs.safewatch.tk/ipfs/QmapRmh4j1wRKJGe5KhLyUoAN7PRFMH9JYyTG2sizMBAxB">/ipfs/QmapRmh4j1wRKJGe5KhLyUoAN7PRFMH9JYyTG2sizMBAxB</a>
+made w/ vi, perl, pandoc &amp; ♡ : <a href="https://ipfs.safewatch.tk/ipfs/QmRcEoAbUby5qvXuuqbKd2Q4RGcqvajcqUHSLHdGmJhh19">/ipfs/QmRcEoAbUby5qvXuuqbKd2Q4RGcqvajcqUHSLHdGmJhh19</a>
